fix scroll freeze on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,6 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  position: fixed;
 }
 html::-webkit-scrollbar,
 body::-webkit-scrollbar {
